@@ -1,5 +1,10 @@
 Version 2.8 (X X, 2016) - ""
 ------------------------------------------------------------------------------
+*** ROM SUPPORT ***
+Clones:
+Laser Cue (neverendig bell fix by Timmo)
+
+
 
 Version 2.7 (June 08th, 2016) - "Alive and kicking"
 ------------------------------------------------------------------------------
